Luminous css changed

--- a/luminous.html
+++ b/luminous.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/font.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/vgaurd.css">
     <link rel="stylesheet" href="OwlCarousel2-2.3.4/dist/assets/owl.carousel.css">
     <link rel="stylesheet" href="OwlCarousel2-2.3.4/dist/assets/owl.theme.default.css">
 </head>
@@ -89,7 +89,6 @@
                             <p class="text">Voltage at max Power (Vmp) is 18.65W <br>-Open Circuit Voltage (Voc) is 22.84V<br>-Current at Max Power (Imp) is 8.85A <br>-Short Circuit Current (Isc) is 9.55A</p>
                             <h5>    6.  Luminous  Poly Crystalline Solar Panel 330 Watt-12volt</h5>
                             <p class="text">Voltage at max Power (Vmp) is 38.03W <br>-Open Circuit Voltage (Voc) is 45.53V<br>-Current at Max Power (Imp) is 8.68A <br>-Short Circuit Current (Isc) is 9.22A</p>
-                            
                         </div>
                     </div>
                 </div>
