About Us changed

--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
         <div class="container">
             <div class="title">
                 <h5>Contact Us</h5>
-                <p3>Our Address :<br></p3>
-                <p2>Near Marthoma Highschool Arumurikkada<br>Kundara P.O<br>PIN : 691501<br>Phone number :
-                    +91 9495 6809 32, +91 9567 0588 90<br>Mail : solarpowersolutionkndr@gmail.com</p2>
+                <p>Our Address :<br></p>
+                <p>Near Marthoma Highschool Arumurikkada<br>Kundara P.O<br>PIN : 691501<br>Phone number :
+                    +91 9495 6809 32, +91 9567 0588 90<br>Mail : solarpowersolutionkndr@gmail.com</p>
             </div>
         </div>
     </section>
