--- a/index.html
+++ b/index.html
@@ -202,13 +202,13 @@
                 <p><a href="mailto:solarpowersolutionkndr@gmail.com">solarpowersolutionkndr@gmail.com</a></p>
             </div>
         </div>
-        <div class="ftrrt">
+        <!-- <div class="ftrrt">
             <p class="ftr-about">
                 <span>About Us</span>
                 <strong>Solar Power Solution</strong> is a company estabilshed on 2022 for providing Solar panels,
                 Inverter and Batteries and Solar water heaters to the users from the companies Luminous and V-Gaurd.
             </p>
-        </div>
+        </div> -->
         <div class="ftr-icons">
             <a href="https://wa.me/+919495680932" target="_blank"><i class="fab fa-whatsapp"></i></a>
             <a href="https://www.facebook.com/profile.php?id=100082001315372" target="_blank"><i
