--- a/luminous.html
+++ b/luminous.html
@@ -27,7 +27,7 @@
                         <i class="fa fa-bars"></i> -->
                     <!-- </button> -->
                 </div>
-                <!-- <div class="navbar-collapse"> -->
+                <div class="navbar-collapse">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a href="#home" class="nav-link">Home</a>
