--- a/loader.html
+++ b/loader.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 <head>
     <title>Unknown</title>
     <link rel="stylesheet" href="loader.css">
@@ -176,4 +176,4 @@
         </div>
     </div>
 </body>
-</html>
+</html> -->
